<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="10dp"
  android:orientation="vertical">

  <TextView
    android:textStyle="normal|bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:fontFamily="sans-serif"
    android:text="@string/title_server_url"
    android:textAllCaps="false"
    android:textColor="?attr/colorAccent"
    android:textSize="18sp"/>

  <EditText
    android:id="@+id/server_url"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/hint_server_url"
    android:inputType="textUri"/>

  <TextView
    android:textStyle="normal|bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/title_platform_uuid"
    android:textColor="?attr/colorAccent"
    android:textSize="18sp"/>

  <EditText
    android:id="@+id/platform_uuid"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/hint_platform_uuid"
    android:inputType="text"/>

  <TextView
    android:textStyle="normal|bold"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:text="@string/title_platform_secret"
    android:textColor="?attr/colorAccent"
    android:textSize="18sp"/>

  <EditText
    android:id="@+id/platform_secret"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/hint_platform_secret"
    android:inputType="text"/>
</LinearLayout>